--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,7 @@
     "bc-qr-reader": "0.1.*",
     "bootstrap-sass": "3.3.*",
     "bootstrap": "~3.3.4",
-    "offline": "~0.7.13"
+    "offline": "0.7.1"
   },
   "devDependencies": {
     "angular-local-storage": "~0.1.5"
