--- a/bower.json
+++ b/bower.json
@@ -26,14 +26,13 @@
     "browserdetection": "0.3.*",
     "bc-qr-reader": "0.1.*",
     "bootstrap-sass": "3.3.*",
-    "bootstrap": "~3.3.4",
-    "angular-charts": "abhisharma2/angular-charts#master"
+    "bootstrap": "~3.3.4"
   },
   "devDependencies": {
-    "angular-local-storage": "~0.1.5",
-    "angular-charts": "abhisharma2/angular-charts#master"
+    "angular-local-storage": "~0.1.5"
   },
   "resolutions": {
-    "angular": "1.4.*"
+    "angular": "1.4.4",
+    "d3": "~3.4.1"
   }
 }
