--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "browserdetection": "0.3.*",
     "bc-qr-reader": "0.1.*",
     "bootstrap-sass": "3.3.*",
-    "bootstrap": "~3.3.4"
+    "bootstrap": "~3.3.4",
+    "angularjs-nvd3-directives": "~0.0.7"
   },
   "devDependencies": {
     "angular-local-storage": "~0.1.5"
